--- a/public/styles.css
+++ b/public/styles.css
@@ -1,13 +1,18 @@
 
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
 body {
 	text-align: center;
 	margin: 0px;
 	padding: 0px;
+	font-family: 'Open Sans', sans-serif;
+	letter-spacing: 0.05em;
 }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
-.main {
+#main {
 	font-family: 'Julius Sans One', sans-serif;
 	font-size: 60px;
 	text-align: center;
@@ -15,23 +20,26 @@ body {
 	top: 30px;
 }
 
-.main h1 {
+#main h1 {
 	margin-top: 1px;
 	margin-bottom: 20px;
 }
 
-.main p {
+#main p {
 	font-size: 20px;
 }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 .menu {
+	margin-top: 30px;
 	text-align: center;
 }
 
 .menu ul {
 	display: inline-block;
+	margin: 0px;
+	padding: 0px;
 }
 
 .menu li {
@@ -53,45 +61,31 @@ body {
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
-.intro {
+#intro {
 	margin: 60px auto 50px auto;
 	width: 75%;
 	color: #333333;
-	font-family: 'Open Sans', sans-serif;
-	letter-spacing: 0.05em;
 	line-height: 1.3;
 }
 
-.intro h1 {
-	font-family: 'Oswald', sans-serif;
-}
-
-.intro span{
+#intro span{
 	color: #FFAF35;
 }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
-.aboutus {
-	margin: 40px auto 0px auto;
-	height: 300px;
-	display: flex;
-	background-color: #DDDDDD;
-}
-
-
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-
-.aboutus {
-	margin: 75px auto;
+#aboutus {
+	margin: 70px auto;
 	width: 50%;
 	height: 165px;
+	background-color: #DDDDDD;
 	border: 10px double white;
 	display: flex;
 	flex-direction: column;
 }
 
-.title {
+
+#title {
 	order: 1;
 	margin: -25px auto 0px auto;
 	width: 300px;
@@ -100,12 +94,10 @@ body {
 	background-color: white;
 }
 
-.blurb {
+#blurb {
 	order: 2;
 	width: 80%;
 	margin: 5px auto 0px auto;
-	font-family: 'Open Sans', sans-serif;
-	letter-spacing: 0.05em;
 	font-size: 14px;
 	line-height: 1.7;
 }
@@ -115,16 +107,14 @@ body {
 
 .services {
 	display: flex;
-	margin: 0px auto 60px auto;
-	width: 80%;
+	margin: 75px auto 60px auto;
+	width: 90%;
 	height: 285px;
-	font-family: 'Open Sans', sans-serif;
-	letter-spacing: 0.05em;
 	color: #333333;
 }
 
 .service-card {
-	width: 320px;
+	width: 340px;
 	margin: 0px auto;
 	border: 1px solid #DDDDDD;
 }
@@ -145,6 +135,7 @@ body {
 	margin-top: 10px;
 	font-family: 'Oswald', sans-serif;
 	font-size: 25px;
+	letter-spacing: 0.08em;
 }
 
 .services p {
@@ -160,22 +151,87 @@ body {
 }
 
 .services button{
-	height: 35px;
+	height: 40px;
 	width: 60%;
-	border: 1px solid #313131;
+	border: 1px solid #818181;
 	border-radius: 5px;
 	background-color: white;
-	font-family: 'Julius Sans One', sans-serif;
-	font-size: 14px;
+	font-family: 'Julius One Sans', sans-serif;
+	letter-spacing: 0.05em;
 }
 
 .services button:hover {
 	transition-duration: 0.5s;
-	border-color: #444444;
-	background-color: #444444;
+	border-color: #333333;
+	background-color: #333333;
 	color: white;
 }
 
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+.infosection {
+	margin: 50px auto 30px auto;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	background-color: #DDDDDD;
+}
+
+.infosection .title {
+	margin: 20px auto;
+	border: 1px solid #818181;
+	width: 280px;
+}
+
+.info {
+	order: 2;
+	margin: 5px auto 0px auto;
+	width: 60%;
+	border: 10px double white;
+	font-family: 'Julius Sans One', sans-serif;
+}
+
+.info p{
+	margin: 10px;
+	font-size: 17px;
+}
+
+.infosection img {
+	order: 3;
+	margin: 20px auto;
+	height: 40px;
+	border: 1px solid red;
+}
+
+.infosection a {
+	order: 3; 
+	margin: 20px auto;
+	height: 40px;
+	width: 40px;
+	background-image: url('../res/icons/svg/018-map-marker.svg');
+	background-size: 40px;
+	background-repeat: no-repeat;
+}
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+.footer.menu {
+	display: inline-block;
+	padding: 15px;
+	margin-top: 0px;
+	margin-bottom: 15px;
+	border: 1px solid #FFAF35;
+}
+
+.finalnote p {
+	color: #818181;
+	font-size: 12px;
+}
+
+.finalnote a:link a:visited a:hover {
+	color: #818181;
+	text-decoration: none;
+}
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
