added all main menu drafts; minor stylistic changes; fixed menu links

--- a/public/menu/menustyles.css
+++ b/public/menu/menustyles.css
@@ -2,7 +2,7 @@
 .menu-nav {
 	width: 100%;
 	height: 60px;
-	border-bottom: 5px dashed #DDDDDD;
+	border-bottom: 5px dashed #FFAF35;
 }
 
 .nav-item {
