--- a/public/menu/menustyles.css
+++ b/public/menu/menustyles.css
@@ -1,38 +1,35 @@
 
 .menu-nav {
 	width: 100%;
-	height: 60px;
+	height: 65px;
 	border-bottom: 5px dashed #FFAF35;
 }
 
 .nav-item {
 	float: left;
-	margin: 5px;
-	display: block;
 }
 
 .nav-item a{
 	text-decoration: none;
 }
 
-.nav-icon {
-	margin-top: 12px;
-	width: 35px;
-	height: 35px;
-}
-
-.nav-icon a {
+a.nav-icon {
 	float: left;
-	display: block;
-	margin: auto;
-	height: 35px;
-	width: 35px;
+	display: inline-block;
+	height: 65px;
+	width: 65px;
 	background-size: 35px;
+	background-position: 50%;
 	background-repeat: no-repeat;
 }
 
 .nav-item .phone a {
 	font-weight: normal;
+}
+
+.nav-item p {
+	display: inline-block;
+	line-height: 32.5px;
 }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -102,10 +99,11 @@ p#etc {
 .column {
 	display: inline-block;
 	width: 45%;
+	vertical-align: top;
 }
 
 .column:nth-child(2n){
-	float: right;
+	margin-right: 90px;
 }
 
 .content {
@@ -166,7 +164,7 @@ p#etc {
 	line-height: 1.8;
 }
 
-.item.last {
+.last.item{
 	border-bottom: none;
 }
 
@@ -224,6 +222,7 @@ SCREEN-SIZE ADJUSTMENTS */
 		transition: all 0.75s ease-in-out;
 		width: 85%;
 		visibility: hidden;
+		margin-top: 30px;
 	}
 
 	.suboptions.menu li {
@@ -241,7 +240,7 @@ SCREEN-SIZE ADJUSTMENTS */
 
 	.label-toggle {
 		display: block;
-		margin: 0px auto;
+		margin: -15px auto;
 		border: 4px double #FFAF35;
 		border-radius: 10px;
 		padding: 5px;
@@ -256,15 +255,17 @@ SCREEN-SIZE ADJUSTMENTS */
 		transition: all 0.15s ease-in-out;
 	}
 
+	.label-toggle:hover {
+		border-color: white;
+		background-color: #FFAF35;
+	}
+
 	.menu.title {
 		margin-top: 40px;
 		margin-bottom: 70px;
 	}
 
 	/***************************************************/
-	.column:nth-child(2n){
-		float: none;
-	}
 
 	.column {
 		display: block;
@@ -272,11 +273,52 @@ SCREEN-SIZE ADJUSTMENTS */
 		width: 85%;
 	}
 
-	.item.last {
-		border-bottom: 1px solid #CCCCCC;
+	/***************************************************/
+
+	.last.item {
+		border-bottom: none;
 	}
 
-	.item.last:last-child{
-		border-bottom: none;
+	.column:nth-child(2n) .last.item {
+		border-bottom: 1px solid #DDDDDD;
+	}
+
+	.column:nth-child(2n){
+		margin-right: 20px;
+	}
+
+	/* used to separate TWO (and only TWO) menu items */
+	.last.item.splitter{
+		border-bottom: 1px solid #CCCCCC !important;
+	}
+
+	/***************************************************/
+}
+
+/* - minor adjustments - reformat top nav-bar - */
+@media (max-width: 518px){
+	.column {
+		width: 90%;
+	}
+
+	/***************************************************/
+
+	.menu-nav{
+		height: 95px;
+	}
+
+	.nav-item:nth-child(2){
+		margin-top: -10px;
+		clear: left;
+	}
+
+	a.nav-icon {
+		height: 50px;
+		width: 50px;
+		background-size: 35px;
+	}
+
+	.nav-item p {
+		line-height: 20px;
 	}
 }
