finished all page drafts :); added small script to re-order menu items; minor stylistic changes

--- a/public/menu/menustyles.css
+++ b/public/menu/menustyles.css
@@ -307,6 +307,10 @@ SCREEN-SIZE ADJUSTMENTS */
 		border-bottom: none;
 	}
 
+	.family.last.item {
+		border-bottom: 1px solid #DDDDDD;
+	}
+
 	/* left column*/
 	.column:nth-child(2) .last.item {
 		border-bottom: 1px solid #DDDDDD;
