--- a/menu/menustyles.css
+++ b/menu/menustyles.css
@@ -1,16 +1,21 @@
 
 .menu-nav {
+	display: flex;
 	width: 100%;
 	height: 65px;
 	border-bottom: 5px dashed #FFAF35;
 }
 
-.nav-item {
-	float: left;
-}
-
 .nav-item a{
 	text-decoration: none;
+}
+
+/*wallet icon / descriptor in top-nav bar*/
+.nav-item:nth-child(3){
+	margin-left: auto;
+	margin-right: 40px;
+	pointer-events: none;
+	cursor: default;
 }
 
 a.nav-icon {
@@ -235,7 +240,8 @@ SCREEN-SIZE ADJUSTMENTS */
 }
 
 /* - change submenu to hamburger format + stack menu columns - */
-@media (max-width: 738px){
+/*@media (max-width: 738px){*/
+  @media(max-width: 850px){
 
 	.suboptions.menu {
 		margin-bottom: 0px;
@@ -332,7 +338,8 @@ SCREEN-SIZE ADJUSTMENTS */
 }
 
 /* - minor adjustments - reformat top nav-bar - */
-@media (max-width: 518px){
+/*@media (max-width: 518px){*/
+  @media (max-width: 915px){
 	.column {
 		width: 90%;
 	}
@@ -340,12 +347,19 @@ SCREEN-SIZE ADJUSTMENTS */
 	/***************************************************/
 
 	.menu-nav{
-		height: 95px;
+		height: 160px;
+		flex-direction: column;
 	}
 
-	.nav-item:nth-child(2){
-		margin-top: -10px;
-		clear: left;
+	.nav-item{
+		text-align: left;
+		border-bottom: 1px dashed #CCCCCC;
+	}
+
+	/*wallet icon / descriptor in top-nav bar*/
+	.nav-item:nth-child(3){
+		margin: 0px;
+		border-bottom: none;
 	}
 
 	a.nav-icon {
