revamp styling in menu nav bar (top)

--- a/styles.css
+++ b/styles.css
@@ -233,7 +233,6 @@ a#contact-icon {
 }
 
 
-
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /* FOOTER + FOOTER MENU*/
 
@@ -254,8 +253,12 @@ a#contact-icon {
 	font-size: 10px;
 }
 
+.finalnote a {
+	color: inherit;
+}
+
 .finalnote a:link a:visited a:hover {
-	color: #818181;
+	color: inherit;
 	text-decoration: none;
 }
 
