--- a/menu/menustyles.css
+++ b/menu/menustyles.css
@@ -1,39 +1,29 @@
 
 .menu-nav {
 	display: flex;
+	flex-wrap:wrap;
 	width: 100%;
 	height: 65px;
+	font-size: 14px;
 	border-bottom: 5px dashed #FFAF35;
 }
 
+.nav-item {
+	display: flex;
+	align-items: center;
+}
+
 .nav-item a{
+	color: inherit;
 	text-decoration: none;
 }
 
-/*wallet icon / descriptor in top-nav bar*/
-.nav-item:nth-child(3){
-	margin-left: auto;
-	margin-right: 40px;
-	pointer-events: none;
-	cursor: default;
-}
-
 a.nav-icon {
-	display: inline-block;
 	height: 65px;
 	width: 65px;
 	background-size: 35px;
 	background-position: 50%;
 	background-repeat: no-repeat;
-}
-
-.nav-item .phone a {
-	font-weight: normal;
-}
-
-.nav-item p {
-	display: inline-block;
-	line-height: 32.5px;
 }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
