--- a/styles.css
+++ b/styles.css
@@ -176,6 +176,7 @@ button:hover {
 	border-color: #333333;
 	background-color: #333333;
 	color: white;
+	cursor: pointer;
 }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -308,6 +309,44 @@ a#contact-icon {
 	padding: 15px 25px;
 	margin-bottom: 30px;
 	line-height: 1.7;
+}
+
+/* ________________________________________________
+----------------------
+-- RETIREMENT PAGE  --
+----------------------
+*/
+
+.retirement {
+	max-width: 1300px;
+	margin: auto;
+	width: 75%;
+}
+
+.splash {
+	margin: 15px auto 0px auto;
+	line-height: 15px;
+	font-family: "Caveat", cursiive;
+	font-optical-sizing: auto;
+	font-weight: 500;
+	font-style: normal;
+	font-size: 45px;
+	padding-bottom: 0px;
+	border-bottom: 8px dotted #FFAF35;
+}
+
+.notice {
+	margin: 40px auto 40px auto;
+	font-family: "Caveat", cursive;
+	font-style: normal;
+	font-size: 25px;
+}
+
+.notice .icon {
+	margin: 0px auto;
+	display: block;
+	width: 50px;
+	height: 50px;
 }
 
 /* ________________________________________________
@@ -472,6 +511,26 @@ SCREEN-SIZE ADJUSTMENTS */
 /* visual separation for multi-line nav bar on regular pages*/
 @media (max-width: 655px){
 
+	/*
+	-- RETIREMENT PAGE --------------------------
+	*/
+	.retirement {
+		width: 100%;
+	}
+
+	.splash {
+		font-size: 38px;
+	}
+
+	.notice {
+		font-size: 22px;
+		margin: 10%;
+	}
+
+	/*
+	-- OTHER ------------------------------------
+	*/
+
 	#regularmenu {
 		border-top: 2px solid #EEEEEE;
 		border-bottom: 2px solid #EEEEEE;
@@ -486,12 +545,23 @@ SCREEN-SIZE ADJUSTMENTS */
 	.update-card {
 		width: 75%;
 	}
-
-	
 }
 
 /* small screen size */
 @media (max-width: 518px){
+
+	/*
+	-- RETIREMENT PAGE --------------------------
+	*/
+
+	.splash {
+		font-size: 30px;
+	}
+
+	.notice {
+		font-size: 21px;
+		margin: 7%;
+	}
 
 	/*
 	-- HOME PAGE ----------------------------------
